# lockin

./: .dockerignore  Dockerfile  LICENSE  README.md  index.html  manifest.webmanifest  package-lock.json  package.json
.github/workflows/: desktop.yml
design_handoff_lockin/: LOCKIN.dc.html  README.md
docs/: index.html  landing.html  manifest.webmanifest  service-worker.js
scripts/: check-syntax.js  check-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: lockin.test.js
