[package]
name = "lockin"
version = "0.2.0"
description = "Lockin — your pocket CS2 coach"
authors = ["jacquesvn"]
edition = "2021"

[lib]
name = "lockin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
