[package]
name = "lockin"
version = "0.15.1"
description = "Lockin — your pocket CS2 coach"
authors = ["jacquesvn"]
edition = "2021"

[lib]
name = "lockin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# generate_context! expands the updater config and emits serde_json paths, so the app crate
# must declare these directly even though tauri already depends on them.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
